--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
+    "common-base64-downloader-react": "^1.0.7",
     "dayjs": "^1.11.11",
     "formidable": "^3.5.1",
     "formik": "^2.4.6",
