--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-pdf": "^9.1.0",
     "react-reveal": "^1.2.2",
     "react-share": "^5.1.0",
     "yup": "^1.4.0"
