--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styles": "^5.15.21",
     "@mui/x-date-pickers": "^7.6.2",
+    "@supabase/supabase-js": "^2.45.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
